# analise_fraude

./: README.md  pyproject.toml
notebooks/: analise-fraude.ipynb  case_fraude.ipynb
src/: testes.py
