[project]
name = "case-fraude"
version = "0.1.0"
description = ""
authors = [
    {name = "Manoel Castro",email = "manoelcastro.nt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy (>=1.16.0,<2.2)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.5,<=3.10)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)"
]

[tool.poetry]
packages = [{include = "case_fraude", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
